feat:增加了服务注册、发现、消费的代码 subject:可以通过负载均衡的方式，来消费已注册的服务了

--- a/scaffold/src/main/resources/application-test.properties
+++ b/scaffold/src/main/resources/application-test.properties
@@ -1,20 +1,2 @@
-# 测试环境的配置（日常部署用这套配置）
+# \u6D4B\u8BD5\u73AF\u5883\u7684\u914D\u7F6E\uFF08\u65E5\u5E38\u90E8\u7F72\u7528\u8FD9\u5957\u914D\u7F6E\uFF09
 server.port=8080
-
-
-#--------------关于actuator暴露端点的配置（version: Spring-Boot-2.0）-----------------
-# 说明：
-#   1.要通过actuator暴露端点，必须同时是启用（enabled）和暴露（exposed）的
-#   2.所有除了/health和/info的端点，默认都是不暴露的
-#   3.所有除了/shutdown的端点，默认都是启用的
-# PS.生产环境由于安全性的问题，注意不要暴露敏感端点
-
-# 设置暴露所有端点
-management.endpoints.web.exposure.include=*
-
-# 设置单个端点（/shutdown）可用
-#management.endpoint.shutdown.enabled=true
-
-# 设置暴露所有端点，除了env
-#management.endpoints.web.exposure.include=*
-#management.endpoints.web.exposure.exclude=env
