--- a/scaffold/src/main/resources/application.properties
+++ b/scaffold/src/main/resources/application.properties
@@ -1,17 +1,23 @@
 # ---------\u4E0B\u9762\u662F\u73AF\u5883\u914D\u7F6E--------------
 # \u591A\u73AF\u5883\u914D\u7F6E\uFF1A\u542F\u52A8\u9879
-spring.profiles.active=test
+spring.profiles.active=dev
 
 # \u670D\u52A1\u7AEF\u53E3\u53F7
 server.port=8080
 
-# ---------\u4E0B\u9762\u662Fapp\u81EA\u5B9A\u4E49\u4FE1\u606F\uFF0C\u53EF\u4EE5\u4EE5json\u901A\u8FC7/info\u8BFB\u53D6
+# ---------\u670D\u52A1\u6CE8\u518C\u76F8\u5173\u5185\u5BB9------------
+# \u670D\u52A1\u6CE8\u518C\u540D\u79F0
+spring.application.name=scaffold-service
+# \u670D\u52A1\u6CE8\u518C\u7684\u5730\u5740
+eureka.client.serviceUrl.defaultZone=http://localhost:1234/eureka/
+
+# ---------app\u81EA\u5B9A\u4E49\u4FE1\u606F\uFF0C\u53EF\u4EE5\u4EE5json\u901A\u8FC7/info\u8BFB\u53D6
 info.app.name=spring boot \u67B6\u624B\u67B6
 info.app.version=0.0.1
 # \u5F00\u542Fhttp\u8BBF\u95EE\u7684\u7F16\u7801\u8BBE\u7F6E\uFF0C\u4F7F\u7528\u9ED8\u8BA4\u7684utf-8\uFF08\u4E0D\u52A0\u7684\u8BDD\uFF0C\u4E0A\u9762\u7684\u4E2D\u6587\u4F1A\u4E71\u7801\uFF09
 spring.http.encoding.force=true
 
-# --------\u4E0B\u9762\u662F\u53C2\u6570\u914D\u7F6E\u7684\u793A\u4F8B-----------
+# ---------\u53C2\u6570\u914D\u7F6E\u7684\u793A\u4F8B-----------
 # \u751F\u621010-20\u7684\u968F\u673A\u6570\uFF08\u6BCF\u6B21\u7CFB\u7EDF\u542F\u52A8\u751F\u6210\u4E00\u6B21\uFF09
 test.random.number=${random.int[10,20)}
 # \u5F15\u7528\u4E0A\u9762\u53D8\u91CF\u751F\u6210\u5B57\u7B26\u4E32
