--- a/ribbon-consumer/src/main/resources/application.properties
+++ b/ribbon-consumer/src/main/resources/application.properties
@@ -1,5 +1,19 @@
-# \u5F00\u53D1\u73AF\u5883\u7684\u914D\u7F6E\uFF08\u672C\u5730\u5F00\u53D1\u65F6\u7528\u8FD9\u5957\u914D\u7F6E\uFF09
-server.port=8080
+# \u670D\u52A1\u7AEF\u53E3\u53F7
+server.port=9000
+
+# ---------\u670D\u52A1\u6CE8\u518C\u76F8\u5173\u5185\u5BB9------------
+# \u670D\u52A1\u6CE8\u518C\u540D\u79F0
+spring.application.name=ribbon-consumer
+# \u670D\u52A1\u6CE8\u518C\u7684\u5730\u5740
+eureka.client.serviceUrl.defaultZone=http://localhost:1234/eureka/
+
+
+# ---------app\u81EA\u5B9A\u4E49\u4FE1\u606F\uFF0C\u53EF\u4EE5\u4EE5json\u901A\u8FC7/info\u8BFB\u53D6
+info.app.name=\u670D\u52A1\u6D88\u8D39\u6D4B\u8BD5app
+info.app.version=0.0.1
+# \u5F00\u542Fhttp\u8BBF\u95EE\u7684\u7F16\u7801\u8BBE\u7F6E\uFF0C\u4F7F\u7528\u9ED8\u8BA4\u7684utf-8\uFF08\u4E0D\u52A0\u7684\u8BDD\uFF0C\u4E0A\u9762\u7684\u4E2D\u6587\u4F1A\u4E71\u7801\uFF09
+spring.http.encoding.force=true
+
 
 #--------------\u5173\u4E8Eactuator\u66B4\u9732\u7AEF\u70B9\u7684\u914D\u7F6E\uFF08version: Spring-Boot-2.0\uFF09-----------------
 # \u8BF4\u660E\uFF1A
